--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs-mate": "^4.0.0",
+    "express-session": "^1.18.0",
     "joi": "^17.13.3"
   }
 }
